tests/invalid/match_assumed_must_be_last.wio
fn Entry() -> i32 {
    let value = match (1) {
        assumed: 10;
        1: 20;
    };

    return value;
}
